fix(gateway): address review comments for subscription, chain related changes